syntax = "proto3";

package attest;
option go_package = "remote-attest-test-server-go/proto/attest;attest";


service Attest {
  rpc Attest (AttestRequest) returns (AttestReply);
}

message AttestRequest {
  bytes report_data = 1;
}

message AttestReply {
  string quote = 1;
}